--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,5 +1,5 @@
 .sticky {
-  background-color: #e8dfca !important;
+  background-color: #193542 !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
   backdrop-filter: blur(15px) !important;
