--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left,#F1F0E8, #193542);
+  background-image: linear-gradient(to left,#193542, #193542);
 }
